--- a/src/components/JobItemDetails/index.css
+++ b/src/components/JobItemDetails/index.css
@@ -1,3 +1,8 @@
+.failure_view_img {
+  height: 100%;
+  width: 100%;
+}
+
 .jb_details_container {
   background-color: #000000;
   padding: 5%;
@@ -110,5 +115,10 @@
     height: 30%;
     width: 100%;
     margin-left: 0px;
+  }
+
+  .job_item_load {
+    height: 100vh;
+    width: 100vw;
   }
 }
